force-app/main/default/objects/Map_Finder_Instance__mdt/Map_Finder_Instance__mdt.object-meta.xml
<CustomObject>
    <label>Map Finder Instance</label>
    <pluralLabel>Map Finder Instances</pluralLabel>
</CustomObject>