force-app/main/default/objects/Map_Finder_Instance__mdt/fields/Base_Filter__c.field-meta.xml
<CustomField>
    <fullName>Base_Filter__c</fullName>
    <label>Base Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>