force-app/main/default/objects/Map_Finder_Instance__mdt/fields/Campaign_Member_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id_Field__c</fullName>
    <label>Campaign Member Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>