force-app/main/default/objects/Map_Finder_Instance__mdt/fields/Finder_Class__c.field-meta.xml
<CustomField>
    <fullName>Finder_Class__c</fullName>
    <label>Finder Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>