force-app/main/default/objects/Map_Finder_Instance__mdt/fields/Geolocation_Field__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Field__c</fullName>
    <label>Geolocation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>