force-app/main/default/objects/Map_Finder_Instance__mdt/fields/Parent_Objects__c.field-meta.xml
<CustomField>
    <fullName>Parent_Objects__c</fullName>
    <description>Parent/lookup objects of the selected object. Object API names should be separated by comma (,). Ex: ucinn_ascendv2__Contact__c, ucinn_ascendv2__Address__c</description>
    <label>Parent Objects</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>